<resources>
    <string name="app_name">TrafficCap001</string>
    <string name="appid_box_name">Идентификатор приложения</string>
    <string name="appid_box_text">Сюда идентификатор приложения для захвата</string>
    <string name="start_button">Запуск VPN</string>
    <string name="stop_button">Остановка VPN</string>
    <string name="vpn_forbidden_text">Для работы нужен VPN, сорри.</string>
    <string name="allow_vpn_text">Разрешите использование VPN</string>
    <string name="empty_appid_error">Пустой AppId</string>
    <string name="bad_appid_error">Неправильный AppId</string>
    <string name="unknown_host_error">Неизвестный хост</string>
    <string name="unknown_appid">Неизвестный идентификатор приложения</string>
    <string name="recstats_text">Статистика принятого</string>
    <string name="recpacks_text">Пакетов принято</string>
    <string name="sentstats_text">Статистика отправленного</string>
    <string name="sentpacks_text">Пакетов отправлено</string>
    <string name="cannot_create">Невозможно создать потоки</string>
</resources>